--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethereum-ens": "^0.7.1",
     "ethereumjs-wallet": "^0.6.0",
     "mustache": "^2.3.0",
+    "underscore": "^1.8.3",
     "web3": "^0.19.1",
     "web3-provider-engine": "^13.0.3"
   }
