--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "homepage": "https://github.com/ethercards/ethercards.github.io#readme",
   "dependencies": {
     "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "bip39": "^2.2.0",
     "bluebird": "^3.5.0",
     "es6-shim": "^0.35.3",
     "ethereum-ens": "^0.7.1",
+    "ethereumjs-tx": "^1.3.3",
     "ethereumjs-wallet": "^0.6.0",
     "mustache": "^2.3.0",
     "underscore": "^1.8.3",
