--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bip39": "^2.2.0",
     "bluebird": "^3.5.0",
     "es6-shim": "^0.35.3",
+    "eth-ens-namehash": "^2.0.0",
     "ethereum-ens": "^0.7.1",
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-wallet": "^0.6.0",
